logs/validate.20260408-065038.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/StructChainedHashTable.rs:399:38
    |
399 | ...                   implies !#[trigger] table.table@[j].spec_entry_to_map().dom().contains(*key) by {}
    |                                ^

error[E0425]: cannot find type `Node` in this scope
   --> src/Chap47/StructChainedHashTable.rs:947:76
    |
947 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Debug for Node<Key, Value> {
    |                                                                            ^^^^ not found in this scope

error[E0425]: cannot find type `Node` in this scope
   --> src/Chap47/StructChainedHashTable.rs:957:78
    |
957 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Display for Node<Key, Value> {
    |                                                                              ^^^^ not found in this scope

error[E0425]: cannot find type `ChainList` in this scope
   --> src/Chap47/StructChainedHashTable.rs:965:76
    |
965 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Debug for ChainList<Key, Value> {
    |                                                                            ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ChainList` in this scope
   --> src/Chap47/StructChainedHashTable.rs:973:78
    |
973 |     impl<Key: std::fmt::Debug, Value: std::fmt::Debug> std::fmt::Display for ChainList<Key, Value> {
    |                                                                              ^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StructChainedHashTableStEph` in this scope
   --> src/Chap47/StructChainedHashTable.rs:981:30
    |
981 |     impl std::fmt::Debug for StructChainedHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `StructChainedHashTableStEph` in this scope
   --> src/Chap47/StructChainedHashTable.rs:987:32
    |
987 |     impl std::fmt::Display for StructChainedHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 3563MB, peak z3 RSS: 414MB, min free: 22443MB
Sampled CPU Usage: rust_verify: 51s, z3 children: 23s
